--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
+    "micromodal": "^0.4.10",
     "mongoose": "^7.4.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
