--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "chart.js": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "helmet": "^7.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.6.0",
