--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "underscore": "^1.13.6"
   },
   "scripts": {
-    "dev": "nodemon app"
+    "dev": "nodemon app",
+    "start": "node app"
   }
 }
